[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cml"
version = "0.1.4"
description = "Controlled Mutation Layer (CML) - Python SDK (bare bones)"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["cml*"]
exclude = ["examples*"]
